tests/ui/duplicate_underscore_argument.stderr
error: `darth` already exists, having another argument having almost the same name makes code comprehension and documentation more difficult
 --> $DIR/duplicate_underscore_argument.rs:7:23
  |
7 | fn join_the_dark_side(darth: i32, _darth: i32) {} //~ERROR `darth` already exists
  |                       ^^^^^
  |
note: lint level defined here
 --> $DIR/duplicate_underscore_argument.rs:4:9
  |
4 | #![deny(duplicate_underscore_argument)]
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

